Refactor configuration and update dependencies
- Removed unused imports and configurations in DatabaseConfiguration, JacksonConfiguration, LoggingConfiguration, and SecurityConfiguration.
- Updated MongoDB initialization logic in InitialSetupMigration to check for existing authorities and users before saving.
- Simplified user authority and user creation logic in InitialSetupMigration.
- Replaced deprecated ObjectMapper import with tools.jackson.databind.ObjectMapper in multiple classes.
- Updated application configuration files to improve logging and MongoDB connection settings.
- Refactored test classes to use new WebTestClient import and updated assertions for user authorities.
- Enhanced MailServiceIT to use modern file handling and improved message loading.
- Cleaned up various test classes by removing unnecessary imports and ensuring consistent usage of Set.of() for authorities.