@@ -102,7 +102,7 @@ public class UserMapper {
     @Mapping(target = "id", source = "id")
     public Set<UserDTO> toDtoIdSet(Set<User> users) {
         if (users == null) {
-            return Collections.emptySet();
+            return Set.of();
         }
 
         Set<UserDTO> userSet = new HashSet<>();
@@ -133,7 +133,7 @@ public class UserMapper {
     @Mapping(target = "login", source = "login")
     public Set<UserDTO> toDtoLoginSet(Set<User> users) {
         if (users == null) {
-            return Collections.emptySet();
+            return Set.of();
         }
 
         Set<UserDTO> userSet = new HashSet<>();
