@@ -1,6 +1,6 @@
 package net.jojoaddison.config;
 
-import java.util.Collections;
+import java.util.Map;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.DisposableBean;
@@ -28,15 +28,14 @@ public class MongoDbTestContainer implements InitializingBean, DisposableBean {
     public void afterPropertiesSet() {
         if (null == mongodbContainer) {
             mongodbContainer = new MongoDBContainer("mongo:7.0.6")
-                .withTmpFs(Collections.singletonMap("/testtmpfs", "rw"))
+                .withTmpFs(Map.of("/testtmpfs", "rw"))
                 /* .withCommand(
                     "--nojournal --wiredTigerCacheSizeGB 0.25 --wiredTigerCollectionBlockCompressor none --slowOpSampleRate 0 --setParameter ttlMonitorEnabled=false --setParameter diagnosticDataCollectionEnabled=false --setParameter logicalSessionRefreshMillis=6000000 --setParameter enableFlowControl=false --setParameter oplogFetcherUsesExhaust=false --setParameter disableResumableRangeDeleter=true --setParameter enableShardedIndexConsistencyCheck=false --setParameter enableFinerGrainedCatalogCacheRefresh=false --setParameter readHedgingMode=off --setParameter loadRoutingTableOnStartup=false --setParameter rangeDeleterBatchDelayMS=2000000 --setParameter skipShardingConfigurationChecks=true --setParameter syncdelay=3600"
                 )
                 .withCreateContainerCmdModifier(cmd ->
                     cmd.getHostConfig().withMemory(memoryInBytes).withMemorySwap(memorySwapInBytes).withNanoCPUs(nanoCpu)
                 ) */
-                .withLogConsumer(new Slf4jLogConsumer(log))
-                .withReuse(true);
+                .withLogConsumer(new Slf4jLogConsumer(log));
         }
         if (!mongodbContainer.isRunning()) {
             mongodbContainer.start();
